--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ footer p {
 
 @media all and (min-width: 480px) {
 
+  .form{
+    display: flex;
+    flex-wrap: wrap;
+  }
   p{
     margin: 0 20px 0 10px;
     
@@ -183,6 +187,7 @@ footer p {
     display: flex;
     flex-flow: column wrap;
     flex-direction: row;
+    justify-content: center;
   
   }
 
